--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "express": "5.0.0-alpha.2",
-    "express-ws": "^2.0.0-rc.1"
+    "express-ws": "^2.0.0-rc.1",
+    "mongodb": "^2.1.18"
   }
 }
