--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "express": "5.0.0-alpha.2",
     "express-ws": "^2.0.0-rc.1",
     "mongodb": "^2.1.18"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
